Fixed subtitle wrapping on wtf

--- a/wtf/pagecustom.css
+++ b/wtf/pagecustom.css
@@ -59,7 +59,7 @@ font-size: 2em;
 
 	#headline2{
 		margin-top: -10px;
-		font-size: 3.7em;
+		font-size: 3.6em;
 		color: #AAAAAA;
 	}
 
